updating dockerfile with gradle build